@@ -1050,6 +1050,17 @@ stopifnot(identical(d0, sin(d0))
 ## all but the first failed in R < 3.5.0
 
 
+## pretty(x, n) for n = <large> or  large diff(range(x)) gave overflow in C code
+(fLrg <- Filter(function(.) . < 9e307, c(outer(1:8, 10^(0:2))*1e306)))
+pL  <- vapply(fLrg, function(f)length(pretty(c(-f,f), n = 100,  min.n = 1)), 1L)
+pL
+pL3 <- vapply(fLrg, function(f)length(pretty(c(-f,f), n = 10^3, min.n = 1)), 1L)
+pL3
+stopifnot(71 <= pL, pL <= 141, 81 <= pL[-7], # not on Win-64: pL[-15] <= 121,
+          701 <= pL3, pL3 <= 1401) # <= 1201 usually
+## in R < 3.5.0, both had values as low as 17
+
+
 
 ## keep at end
 rbind(last =  proc.time() - .pt,
